<resources>
    <string name="welcome_to">Welcome to</string>
    <string name="airport_dcs">Airport DCS</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="please_wait">Please Wait</string>
    <string name="progress_login">Progressing</string>
    <string name="general_token_error_popup_message">Token expired, please login again.</string>
    <string name="general_popup_ok">OK</string>
    <string name="general_token_error_popup_title">Warning</string>
    <string name="general_popup_cancel">Cancel</string>
    <string name="home_hello">Hello,</string>
    <string name="home_flights">Flights</string>
    <string name="home_baggage_tracking">Baggage Tracking</string>
    <string name="home_side_menu_settings">Settings</string>
    <string name="home_side_menu_log_out">Log Out</string>
    <string name="page_title_flight_details">Flight Details</string>
    <string name="flights_flight_no">Flight No:</string>
    <string name="flights_gate">Gate:</string>
    <string name="detail_flight_type">FlightType:</string>
    <string name="detail_aircraft">Aircraft:</string>
    <string name="detail_flight_status">Flight Status:</string>
    <string name="detail_reg">Reg</string>
    <string name="detail_gate">Gate:</string>
    <string name="detail_check_in">Check-in:</string>
    <string name="detail_unboarded">Unboarded:</string>
    <string name="detail_boarded">Boarded:</string>
    <string name="detail_boarding_gate">Boarding Gate:</string>
    <string name="detail_delay_time">DelayTime</string>
    <string name="item_flight_boarding_time">Boarding Time</string>
    <string name="item_flight_flight_status">Flight Status</string>
    <string name="dialog_title_select_a_device">Please Select A Device</string>
    <string name="page_title_flights">Flights</string>
    <string name="list_hint_search_flight_no">Search Flight No</string>
    <string name="home_today_label">TODAY</string>
    <string name="home_yesterday_label">YESTERDAY</string>
    <string name="home_tomorrow_label">TOMORROW</string>
    <string name="home_flights_found">flights found for this day</string>
    <string name="detail_board_pax">Board Pax</string>

    <string-array name="barcode_devices_array_zebra">
        <item>Zebra Scanner</item>
        <item>Device Camera</item>
    </string-array>

    <string-array name="barcode_devices_array_kranger">
        <item>K-Ranger Scanner</item>
        <item>Device Camera</item>
    </string-array>

    <string-array name="barcode_devices_array_pranger">
        <item>P-Ranger Scanner</item>
        <item>Device Camera</item>
    </string-array>
</resources>